@@ -1681,9 +1681,9 @@ public class TypeChecker extends SimpleBLangNodeAnalyzer<TypeChecker.AnalyzerDat
                     break;
                 case TypeTags.RECORD:
                     Map<String, BField> fieldList = ((BRecordType) referredKeyTypeConstraint).getFields();
-                    memberTypes = fieldList.entrySet().stream()
+                    memberTypes = new ArrayList<>(fieldList.entrySet().stream()
                             .filter(e -> fieldNameList.contains(e.getKey())).map(entry -> entry.getValue().type)
-                            .collect(Collectors.toList());
+                            .toList());
                     if (memberTypes.isEmpty()) {
                         memberTypes.add(keyTypeConstraint);
                     }
@@ -4809,17 +4809,17 @@ public class TypeChecker extends SimpleBLangNodeAnalyzer<TypeChecker.AnalyzerDat
             }
         }
 
-        List<BVarSymbol> requiredParams = function.symbol.params.stream()
+        List<BVarSymbol> requiredParams = new ArrayList<>(function.symbol.params.stream()
                 .filter(param -> !param.isDefaultable)
-                .collect(Collectors.toList());
+                .toList());
         // Given named and positional arguments are less than required parameters.
         if (requiredParams.size() > invocationArguments.size()) {
             return false;
         }
 
-        List<BVarSymbol> defaultableParams = function.symbol.params.stream()
+        List<BVarSymbol> defaultableParams = new ArrayList<>(function.symbol.params.stream()
                 .filter(param -> param.isDefaultable)
-                .collect(Collectors.toList());
+                .toList());
 
         int givenRequiredParamCount = 0;
         for (int i = 0; i < positionalArgs.size(); i++) {
