@@ -36,7 +36,6 @@ import org.ballerinalang.langserver.completions.util.SortingUtil;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Completion provider for {@link SelectClauseNode} context.
@@ -73,7 +72,7 @@ public class SelectClauseNodeContext extends AbstractCompletionProvider<SelectCl
                         .filter(symbol -> symbol.getName().isPresent() && !symbol.getName().get().contains("$"))
                         .filter(symbol -> completionItems
                                 .addAll(populateBallerinaFunctionCompletionItems(symbol, context)))
-                        .collect(Collectors.toList());
+                        .toList();
             }
         }
         this.sort(context, node, completionItems);
