@@ -49,7 +49,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * A utility for building a SignatureInformation.
@@ -182,11 +181,11 @@ public class SignatureInfoModelBuilder {
             return;
         }
 
-        List<Parameter> parameters = parameterSymbols
+        List<Parameter> parameters = new ArrayList<>(parameterSymbols
                 .subList(skipFirstParam() ? 1 : 0, parameterSymbols.size())
                 .stream()
                 .map(param -> new Parameter(param, false, false, context))
-                .collect(Collectors.toList());
+                .toList());
 
         Optional<ParameterSymbol> restParam = functionTypeSymbol.flatMap(FunctionTypeSymbol::restParam);
         restParam.ifPresent(parameter -> parameters.add(new Parameter(parameter, false, true, context)));
@@ -200,7 +199,7 @@ public class SignatureInfoModelBuilder {
 
         includedRecordParams = this.parameterModels.stream()
                 .filter(ParameterInfoModel::isIncludedRecordParam)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
