@@ -22,7 +22,6 @@ import org.ballerinalang.test.runtime.util.TesterinaConstants;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Final test report with coverage (if enabled).
@@ -139,11 +138,11 @@ public class TestReport {
         // sort the module list to be in the alphabetical order
         moduleStatus = moduleStatus.stream()
                 .sorted(Comparator.comparing(ModuleStatus::getName))
-                .collect(Collectors.toList());
+                .toList();
 
         moduleCoverage = moduleCoverage.stream()
                 .sorted(Comparator.comparing(ModuleCoverage::getName))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public float getCoveragePercentage() {
