@@ -32,7 +32,6 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static io.ballerina.semantic.api.test.util.SemanticAPITestUtils.assertBasicsAndGetSymbol;
 import static io.ballerina.semantic.api.test.util.SemanticAPITestUtils.getDefaultModulesSemanticModel;
@@ -69,7 +68,7 @@ public class UnionTypeSymbolTest {
         List<TypeDescKind> memberTypeDescKindList = memberTypeDescriptors
                                                             .stream()
                                                             .map(TypeSymbol::typeKind)
-                                                            .collect(Collectors.toList());
+                                                            .toList();
 
         assertList(memberTypeDescKindList, expTypeList);
     }
@@ -112,7 +111,7 @@ public class UnionTypeSymbolTest {
                                                     .stream()
                                                     .filter(member -> member.typeKind() == TypeDescKind.SINGLETON)
                                                     .map(TypeSymbol::signature)
-                                                    .collect(Collectors.toList());
+                                                    .toList();
         assertList(signatures, List.of("\"int\"", "\"string\"", "100", "\"200\"", "true"));
     }
 
